fix showing result when only cards with 0 value are selected